# gsoc2026-dora-test-utils

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: CI-DEADLOCK-FIX.md  DEMO-RUNBOOK.md  ISSUES-FOR-MENTOR.md  MIDTERM-REPORT.md  PROGRESS.md  WEEK1-2_SUMMARY.md  WEEK3-4-MENTOR-REPORT.md  WEEK3-4_SUMMARY.md  WEEK3-DISCUSSION.md  WEEK4-SUMMARY-WEEK5-PLAN.md  WEEK5_SUMMARY_WEEK6_PLAN.md  WEEK5_SUMMARY_WEEK6_PLAN_CN.md
docs/superpowers/plans/: 2026-06-09-week3-harness-e2e.md  2026-06-14-week4-harness-completion.md  2026-06-21-send-data-convenience.md  2026-06-26-week5-binaries-implementation.md  2026-06-30-week6-integration-testing.md
docs/superpowers/specs/: 2026-06-09-week3-harness-e2e-design.md  2026-06-14-week4-harness-completion-design.md  2026-06-21-send-data-convenience-design.md  2026-06-26-week5-binaries-design.md  2026-06-30-week6-integration-testing-design.md
dora-patches/: event-stream-thread-timeout.patch  recv-timeout.patch  testing-input-channel.patch
scripts/: demo-week8.sh  demo.sh
src/: harness.rs  lib.rs  sink.rs  source.rs  traits.rs
src/mock/: event_stream.rs  mod.rs  output.rs
tests/: e2e.rs  integration.rs  smoke.rs
tests/fixtures/: classifier-dataflow.yml  classifier-expected-high.json  classifier-expected-low.json  classifier-source-expected.json  echo-dataflow.yml  echo-node.rs  multi-echo-dataflow.yml  result-a.json  result-b.json  result-high.json  result-low.json  source-data.json
