[package]
name = "dora-test-utils"
version = "0.1.0"
edition = "2021"
description = "Testing utility library for the DORA framework — unit testing and integration testing support"
license = "Apache-2.0"
repository = "https://github.com/dora-rs/dora-test-utils"
authors = ["SunSunSun689"]

[dependencies]
# DORA node API — the primary integration surface.
# Using main branch; will pin to specific commit after mentor confirmation.
dora-node-api = { git = "https://github.com/dora-rs/dora", branch = "main" }

# Arrow: DORA uses Arrow arrays for inter-node data.
# Using 58 to match latest DORA main (which has upgraded from 53).
arrow = "58"

# Tokio: async runtime used by DORA and our harness.
tokio = { version = "1", features = ["sync", "macros", "rt"] }

# Futures: Stream trait for EventStream compatibility.
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
