[package]
name = "dora-test-utils"
version = "0.1.0"
edition = "2021"
description = "Testing utility library for the DORA framework — unit testing and integration testing support"
license = "Apache-2.0"
repository = "https://github.com/dora-rs/dora-test-utils"
authors = ["SunSunSun689"]

[dependencies]
# CLI argument parsing for test binaries.
clap = { version = "4", features = ["derive"] }

# Error handling for test binaries.
eyre = "0.6"

# Serialization for SinkResult output.
serde = { version = "1", features = ["derive"] }

# DORA node API — the primary integration surface.
# Pinned to commit 45436aad (2026-06-07 snapshot).
# TEMPORARY: use local dora source for TestingInput::Channel development.
# REVERT to git dependency before pushing!
dora-node-api = { path = "dora/apis/rust/node" }

# Arrow: DORA uses Arrow arrays for inter-node data.
# Using 58 to match latest DORA main (which has upgraded from 53).
arrow = "58"
arrow-json = "58"

# Tokio: async runtime used by DORA and our harness.
tokio = { version = "1", features = ["sync", "macros", "rt"] }

# Futures: Stream trait for EventStream compatibility.
futures = "0.3"

# Flume: multi-producer single-consumer channel used by DORA's
# TestingOutput::ToChannel for capturing real node outputs.
# Pinned to match DORA's own flume version (0.10.14).
flume = "0.10"

# serde_json: DORA outputs are serialized as JSON maps in integration
# testing mode; test code inspects them via serde_json::Value.
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
